Bug 1569350 - Added more primitives to our static-analysis from MSVC 2019. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D44827